--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.4.0",
     "chart.js": "^4.4.0",
     "copy-to-clipboard": "^3.3.3",
+    "gapi-script": "^1.2.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
