--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "copy-to-clipboard": "^3.3.3",
     "gapi-script": "^1.2.0",
     "jwt-decode": "^3.1.2",
+    "latest": "^0.2.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
